--- a/src/Components/CardsEnfant/cardsenfant.css
+++ b/src/Components/CardsEnfant/cardsenfant.css
@@ -42,6 +42,9 @@
     margin-top: -5%;
     padding-left: 10%;
 }
+.divEnfantDiv2:hover{
+    background-color: #34397b;
+}
 .divEnfantH3{
     margin-top: 6%;
     font-family: "Rubik";
