--- a/src/App.css
+++ b/src/App.css
@@ -11,18 +11,26 @@ body{
   transition: background-color 0.5s ease;
 }
 .light-mode{
-  background-color: white;
-  z-index: -2;
+  background-color: hsl(236, 100%, 87%)
 }
 .fa-sun{
   display: flex;
   border: 1px solid;
   padding: 5px;
+  position: absolute;
+  top: 3%;
   border-radius: 50%;
   margin-left: 90%;
 }
 @media (max-width: 576px) {
   .divApp{
+    margin-top: 1%;
     flex-direction: column;
+  }
+  .fa-sun{
+    position: absolute;
+    top: 1%;
+    right: 45%;
+    font-size: 12px;
   }
 }
