--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@ body{
   top: 3%;
   border-radius: 50%;
   margin-left: 90%;
+  cursor: pointer;
 }
 @media (max-width: 576px) {
   .divApp{
@@ -35,5 +36,6 @@ body{
     top: 1%;
     right: 45%;
     font-size: 12px;
+    cursor: pointer;
   }
 }
